--- a/HyggshiOSCodeMini.html
+++ b/HyggshiOSCodeMini.html
@@ -1087,7 +1087,7 @@
   <section class="git-debug-section" id="gitdebug">
     <div class="git-debug-container">
       <div class="git-debug-illustration">
-        <img src="Resources/Git.png" alt="Git" class="git-icon" />
+        <img src="https://github.com/HyggshiOSDeveloper/hyggshi-os-website/blob/main/Resources/git.png" alt="Git" class="git-icon" />
         <div class="debug-console-mockup">
           <div class="dbg-head">
             <span class="circle red"></span><span class="circle yellow"></span><span class="circle green"></span>
