--- a/HyggshiOSCodeMini.html
+++ b/HyggshiOSCodeMini.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyggshi OS Code Mini</title>
-  <meta name="description" content="Hyggshi OS Code Mini với IntelliSense, debugging, và Git integration.">
+  <meta name="description" content="Hyggshi OS Code Mini - Trình chỉnh sửa mã nguồn phong cách VS Code: nhẹ, hỗ trợ nhiều ngôn ngữ, tích hợp IntelliSense, debugging, Git, giao diện hiện đại, tuỳ biến Dark/Light, tối ưu cho hệ điều hành Hyggshi OS."/>
+  <meta property="og:title" content="Hyggshi OS Code Mini - Code Editor hiện đại"/>
+  <meta property="og:description" content="Trình chỉnh sửa mã nguồn phong cách VS Code, đa nền tảng, nhiều ngôn ngữ, tối ưu cho Hyggshi OS. Tối ưu UI/UX, hỗ trợ Git, debug, extensions."/>
+  <meta property="og:image" content="Resources/HOSCM-demo.png"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://hyggshi-os-project-center.github.io/Hyggshi-OS-Code-Mini/HyggshiOSCodeMini.html"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="Hyggshi OS Code Mini - Code Editor hiện đại"/>
+  <meta name="twitter:description" content="Editor cho Hyggshi OS, gọn nhẹ, hiện đại, VS Code-style."/>
+  <meta name="twitter:image" content="Resources/HOSCM-demo.png"/>
   <link rel="icon" href="Resources/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1087,7 +1096,7 @@
   <section class="git-debug-section" id="gitdebug">
     <div class="git-debug-container">
       <div class="git-debug-illustration">
-        <img src="Resources/git.png" alt="Git" class="git-icon" />
+        <img src="Resources/Git.png" alt="Git" class="git-icon" />
         <div class="debug-console-mockup">
           <div class="dbg-head">
             <span class="circle red"></span><span class="circle yellow"></span><span class="circle green"></span>
