--- a/The-Cases.html
+++ b/The-Cases.html
@@ -217,6 +217,24 @@
             </ul>
           </div>
         </div>
+        <div class="case-card feature-card">
+          <div class="case-title"><span class="icon">📁</span>Case #7 – The AI Allegation Debate: “Hyggshi uses Claude?” (25/11/2025)</div>
+          <div class="case-desc">Mô tả: Một số thành viên trong cộng đồng đưa ra giả thuyết rằng Hyggshi OS sử dụng Claude hoặc Lovable AI làm lõi hệ thống do tốc độ phát triển nhanh và một số poster/demo trông giống sản phẩm được tạo bởi AI.</div>
+          <div class="case-section"><strong>Nguyên nhân gây hiểu nhầm:</strong>
+            <ul>
+              <li>Các đoạn code và thiết kế được làm rất nhanh → nghi dùng AI backend.</li>
+              <li>Một số poster, demo có phong cách giống AI-generated.</li>
+            </ul>
+          </div>
+          <div class="case-section"><strong>Phản hồi chính thức từ Hyggshi OS:</strong>
+            <p>“Hyggshi OS không phải AI-first company. Đây là dự án cá nhân, dùng AI để hỗ trợ thiết kế và viết code, không dùng làm nền tảng hệ điều hành.”</p>
+          </div>
+          <div class="case-result">Kết quả:</div>
+          <li>Tranh luận lắng xuống. Được ghi vào lịch sử Hyggshi OS như một hiểu lầm mang tính cộng đồng.</li>
+          <li>Hyggshi OS không phải AI-first company. Đây là dự án cá nhân, dùng AI để hỗ trợ thiết kế và viết code, không dùng làm nền tảng hệ điều hành.</li>
+          <li><strong>⚠ Một số thành phần cốt lõi của Hyggshi OS (API, Engine Modules, Technology) sẽ được chuyển sang mã nguồn đóng để bảo vệ hệ thống.
+            Phần giao diện, app cơ bản và cấu trúc OS vẫn mã nguồn mở, người dùng vẫn có thể sử dụng và tùy chỉnh bình thường.</strong></li>
+        </div>
       </section>
     </main>
     <footer class="footer">
