--- a/HyggshiOSCodeMini.html
+++ b/HyggshiOSCodeMini.html
@@ -183,12 +183,29 @@
       pointer-events: none;
     }
 
-    .hero-content {
-      max-width: 900px;
-      margin: 0 auto;
-      position: relative;
+    .hero-bg {
+      position: absolute;
       z-index: 1;
+      top: 0; left: 0; width: 100%; height: 100%;
+      pointer-events: none;
+      opacity: 1;
+      /* Multi-layered radial gradient and VS Code cloud effect */
+      background:
+        radial-gradient(ellipse 63% 27% at 57% 19%, #3c5fffBB 60%, transparent 100%),
+        radial-gradient(ellipse 30% 24% at 18% 43%, #b977fc66 48%, transparent 100%),
+        radial-gradient(ellipse 60% 18% at 79% 84%, #28ead033 44%, transparent 100%),
+        linear-gradient(145deg,#242960 0 30%,#2b3560 70%,#232e52 100%);
+      filter: blur(8px);
+      transition:background .33s,opacity .25s;
     }
+    body.light-mode .hero-bg {
+      background:
+        radial-gradient(ellipse 52% 21% at 64% 24%, #41adff77 50%, transparent 100%),
+        radial-gradient(ellipse 34% 26% at 22% 48%, #ffe28a44 55%, transparent 100%),
+        radial-gradient(ellipse 34% 15% at 70% 97%, #c0ffe033 40%, transparent 100%),
+        linear-gradient(120deg,#f5fafc 0% 60%,#e5f5fe 100%);
+    }
+    .hero-content { max-width: 900px; margin: 0 auto; position: relative; z-index: 2; }
 
     .hero h1 {
       font-size: clamp(2.5rem, 6vw, 4.5rem);
@@ -673,6 +690,41 @@
     .release-date{font-size:0.98rem;color:var(--vscode-text-secondary);margin-left:.9em;}
     @media(max-width:600px){.release-banner{flex-direction:column;gap:.2em;padding:0.5rem 0.4rem 0.7rem 0.7rem;}}
     .quyetcode-section{max-width:850px;margin:2.2rem auto 3.1rem auto;border-radius:20px;padding:2rem 1rem 1.0rem;background:var(--vscode-sidebar);box-shadow:0 7px 36px 0 rgba(40,90,170,0.10);border:1.2px solid var(--vscode-border);}
+    .code-mockup {background: #191e26;border-radius:14px;box-shadow:0 7px 30px rgba(18,30,50,.18);margin:38px auto 0 auto;max-width:980px;position:relative;border:1.2px solid #232f42;padding:0 0 0.65em 0;overflow:hidden;}
+    .code-mockup-header{height:34px;background:#232a3a;display:flex;align-items:center;padding-left:17px;gap:6px;border-radius:14px 14px 0 0;border-bottom:1.1px solid #232f42;}
+    .window-btn{width:12px;height:12px;border-radius:50%;display:inline-block;margin-right:6px;box-shadow:0 2px 7px #0002;}
+    .window-btn.red{background:#ff605c;}
+    .window-btn.yellow{background:#ffbd44;}
+    .window-btn.green{background:#00c93c;}
+    .code-area{margin:0;padding:13px 16px 9px 13px;background:none;font-family:'Fira Mono','Consolas','Monaco',monospace;font-size:1.11rem;color:#cbd8f8;overflow-x:auto;white-space:pre;}
+    .linenumber{color:#657e9c;user-select:none;display:inline-block;width:2.2em;text-align:right;margin-right:12px;}
+    .code-key{color:#38b6ff;font-weight:570;}
+    .code-blue{color:#6aceff;}
+    .code-str{color:#f5a97f;}
+    .code-comment{color:#64e386;font-style:italic;}
+    @media (max-width:700px){.code-mockup{max-width:98vw;font-size:.96rem;}}
+    /* IDE mockup VSCode */
+.ide-mockup{display:flex;flex-direction:row;max-width:960px;margin:50px auto 0 auto;box-shadow:0 11px 38px rgba(10,30,70,0.16);border-radius:12px;border:1.2px solid #23324a;overflow:hidden;background:#151926;min-height:310px;}
+.ide-sidebar{width:49px;background:#232842;display:flex;flex-direction:column;align-items:center;padding:13px 0;gap:8px;box-shadow:1.5px 0 10px #181e3d0a;}
+.ide-sidebar-icon{width:27px;height:27px;border-radius:8px;display:flex;align-items:center;justify-content:center;margin-bottom:4px;transition:background .16s;}
+.ide-sidebar-icon:hover{background:#3141a222;}
+.ide-sidebar-icon img{width:18.5px;height:18.5px;filter:brightness(1.09);}
+.ide-main{flex:1;display:flex;flex-direction:column;}
+.ide-tabs{display:flex;background:#1c2241;border-bottom:1.1px solid #232f42;gap:2px;}
+.ide-tab{padding:7.5px 16px 7.5px 11px;font-size:.99em;color:#acbff9;display:flex;align-items:center;gap:7px;border-radius:9px 9px 0 0;position:relative;cursor:pointer;user-select:none;opacity:.82;}
+.ide-tab-icon{font-size:1.07em;}
+.ide-tab-active{background:#181f36;color:#fff;font-weight:580;opacity:1;}
+.ide-tab-close{margin-left:8px;font-size:1.10em;color:#7a8cb7;cursor:pointer;}
+.ide-editor{flex:1;background:#191e26;padding:0 0 0 0.7rem;overflow:auto;}
+.ide-code{margin:0;padding:14px 13px 10px  0;font-family:'Fira Mono','Consolas','Monaco',monospace;font-size:1.13rem;color:#cbd8f8;white-space:pre;line-height:1.61;}
+.ide-linenumber{color:#556e99;display:inline-block;width:2.3em;text-align:right;margin-right:10px;user-select:none;}
+.ide-key{color:#2bbeff;font-weight:550;}
+.ide-blue{color:#29dbff;font-weight:540;}
+.ide-str{color:#f9ae6d;}
+.ide-comment{color:#7cf789;font-style:italic;}
+.ide-statusbar{display:flex;align-items:center;justify-content:space-between;height:29px;background:#21305f;color:#b7d1fb;font-size:.98rem;padding:0 12px 0 17px;border-top:1.1px solid #23324a;font-family:'Consolas','Fira Mono',monospace;}
+.ide-status-right{font-weight:540;color:#3ff;}
+@media(max-width:820px){.ide-mockup{max-width:98vw;}.ide-sidebar{width:37px;}.ide-sidebar-icon{width:20px;height:20px;}.ide-sidebar-icon img{width:13.5px;height:13.5px;}.ide-tabs{font-size:93%;}.ide-code{font-size:.98rem;}}
   </style>
 </head>
 <body>
@@ -697,67 +749,55 @@
 
   <!-- Hero Section -->
   <section class="hero">
+    <div class="hero-bg"></div>
     <div class="hero-content">
-      <h1>Hyggshi OS Code Mini</h1>
-      <p class="hero-subtitle">Code editor hiện đại cho Hyggshi OS với IntelliSense, debugging, và Git integration.</p>
-      <div class="hero-buttons">
-        <a href="#download" class="btn-primary">
-          <span>⬇</span>
-          Tải xuống miễn phí
-        </a>
-        <a href="#features" class="btn-secondary">Tìm hiểu thêm</a>
+      <h1 class="intro-animated intro-delay-0">Hyggshi OS Code Mini</h1>
+      <p class="subtitle intro-animated intro-delay-1">Code editor hiện đại cho Hyggshi OS với IntelliSense, debugging, và Git integration.</p>
+      <div class="hero-buttons intro-animated intro-delay-2">
+        <a href="#download" class="btn btn-primary"><span style="font-size:1.05em">⇩</span> Tải xuống miễn phí</a>
+        <a href="#features" class="btn btn-secondary">Tìm hiểu thêm</a>
       </div>
-    </div>
 
-    <!-- Code Editor Mockup -->
-    <div class="code-mockup fade-in">
-      <div class="code-header">
-        <div class="code-dot"></div>
-        <div class="code-dot"></div>
-        <div class="code-dot"></div>
+    <!-- IDE Mockup - giống VS Code -->
+    <div class="ide-mockup fade-in">
+      <div class="ide-sidebar">
+        <div class="ide-sidebar-icon" title="Explorer">
+          <svg width="19" height="19" fill="none" stroke="#8aa2ff" stroke-width="1.7" viewBox="0 0 24 24"><rect x="5" y="5" width="7" height="7" rx="2"/><rect x="12" y="12" width="7" height="7" rx="2"/><rect x="5" y="12" width="7" height="7" rx="2"/><rect x="12" y="5" width="7" height="7" rx="2"/></svg>
+        </div>
+        <div class="ide-sidebar-icon" title="Search">
+          <svg width="19" height="19" fill="none" stroke="#8aa2ff" stroke-width="1.7" viewBox="0 0 24 24"><circle cx="11" cy="11" r="7"/><line x1="21" y1="21" x2="16.65" y2="16.65"/></svg>
+        </div>
+        <div class="ide-sidebar-icon" title="Source Control">
+          <svg width="19" height="19" fill="none" stroke="#8aa2ff" stroke-width="1.7" viewBox="0 0 24 24"><circle cx="12" cy="6" r="3"/><circle cx="6" cy="18" r="3"/><circle cx="18" cy="18" r="3"/><path d="M12 9v3m0 0l-3 3m3-3l3 3"/></svg>
+        </div>
+        <div class="ide-sidebar-icon" title="Run">
+          <svg width="19" height="19" fill="none" stroke="#8aa2ff" stroke-width="1.7" viewBox="0 0 24 24"><polygon points="6,4 21,12 6,20 6,4" style="fill:#3cd5c7;stroke:#29dbff;stroke-width:1.4"/></svg>
+        </div>
+        <div class="ide-sidebar-icon" title="Extensions">
+          <svg width="19" height="19" fill="none" stroke="#8aa2ff" stroke-width="1.7" viewBox="0 0 24 24"><rect x="9" y="9" width="6" height="6" rx="1.6"/><path d="M1 9.5h6v5H1z"/><path d="M17 9.5h6v5h-6z"/></svg>
+        </div>
       </div>
-      <div class="code-body">
-        <div class="code-line">
-          <span class="code-number">1</span>
-          <span class="code-content">
-            <span class="code-keyword">function</span> <span class="code-function">createHyggshiOS</span>() {
-          </span>
+      <div class="ide-main">
+        <div class="ide-tabs">
+          <div class="ide-tab ide-tab-active"><span class="ide-tab-icon">🐍</span> codehvm.c <span class="ide-tab-close">×</span></div>
+          <div class="ide-tab"><span class="ide-tab-icon">📝</span> README.md</div>
+          <div class="ide-tab"><span class="ide-tab-icon">⚙️</span> settings.json</div>
         </div>
-        <div class="code-line">
-          <span class="code-number">2</span>
-          <span class="code-content">  <span class="code-keyword">const</span> <span class="code-variable">os</span> = <span class="code-keyword">new</span> <span class="code-function">OperatingSystem</span>({</span>
+        <div class="ide-editor">
+          <pre class="ide-code"><code><span class="ide-linenumber"> 1</span> <span class="ide-key">function</span> createHyggshiOS() &#123;
+<span class="ide-linenumber"> 2</span>   <span class="ide-key">const</span> os = <span class="ide-blue">new</span> OperatingSystem(&#123;
+<span class="ide-linenumber"> 3</span>     name: <span class="ide-str">"Hyggshi OS"</span>,
+<span class="ide-linenumber"> 4</span>     version: <span class="ide-str">"2.1.7"</span>,
+<span class="ide-linenumber"> 5</span>     platform: <span class="ide-str">"Hyggshi OS"</span>
+<span class="ide-linenumber"> 6</span>   &#125;);
+<span class="ide-linenumber"> 7</span>   <span class="ide-key">return</span> os;
+<span class="ide-linenumber"> 8</span> &#125;
+<span class="ide-linenumber"> 9</span>
+<span class="ide-linenumber">10</span> <span class="ide-comment">// Hyggshi OS – Tương lai của Hyggshi OS</span></code></pre>
         </div>
-        <div class="code-line">
-          <span class="code-number">3</span>
-          <span class="code-content">    name: <span class="code-string">"Hyggshi OS"</span>,</span>
-        </div>
-        <div class="code-line">
-          <span class="code-number">4</span>
-          <span class="code-content">    version: <span class="code-string">"2.1.7"</span>,</span>
-        </div>
-        <div class="code-line">
-          <span class="code-number">5</span>
-          <span class="code-content">    platform: <span class="code-string">"Hyggshi OS"</span></span>
-        </div>
-        <div class="code-line">
-          <span class="code-number">6</span>
-          <span class="code-content">  });</span>
-        </div>
-        <div class="code-line">
-          <span class="code-number">7</span>
-          <span class="code-content">  <span class="code-keyword">return</span> <span class="code-variable">os</span>;</span>
-        </div>
-        <div class="code-line">
-          <span class="code-number">8</span>
-          <span class="code-content">}</span>
-        </div>
-        <div class="code-line">
-          <span class="code-number">9</span>
-          <span class="code-content"> </span>
-        </div>
-        <div class="code-line">
-          <span class="code-number">10</span>
-          <span class="code-content"><span class="code-comment">// Hyggshi OS - Tương lai của Hyggshi OS</span></span>
+        <div class="ide-statusbar">
+          <span class="ide-status-left">Ln 10, Col 2  |  Spaces: 4  |  UTF-8  |  LF  |  JavaScript</span>
+          <span class="ide-status-right">Hyggshi OS Code Mini 🔵</span>
         </div>
       </div>
     </div>
