--- a/The-Cases.html
+++ b/The-Cases.html
@@ -104,12 +104,12 @@
           <li><a href="About.html" class="nav-link">About</a></li>
           <li><a href="projects.html" class="nav-link">Projects</a></li>
           <li><a href="History.html" class="nav-link">History</a></li>
-          <li><a href="The-Cases.html" class="nav-link active">The Cases</a></li>
+          <li><a href="The-Cases.html" class="nav-link active">Cases</a></li>
           <li><a href="download.html" class="nav-link">Download</a></li>
           <li><a href="license.html" class="nav-link">License</a></li>
-          <li><a href="erorrcode.html" class="nav-link">Error Codes</a></li>
+          <li><a href="erorrcode.html" class="nav-link">Error</a></li>
           <li><a href="timeline.html" class="nav-link">Timeline</a></li>
-          <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
+          <li><a href="OSmain.html" class="nav-link">OS</a></li>
 
           <li>
             <a href="https://discord.gg/PZuDkFzJtc" class="nav-link" target="_blank" title="Join Discord" style="display:flex;align-items:center;gap:0.3rem;">
@@ -229,11 +229,14 @@
           <div class="case-section"><strong>Phản hồi chính thức từ Hyggshi OS:</strong>
             <p>“Hyggshi OS không phải AI-first company. Đây là dự án cá nhân, dùng AI để hỗ trợ thiết kế và viết code, không dùng làm nền tảng hệ điều hành.”</p>
           </div>
-          <div class="case-result">Kết quả:</div>
-          <li>Tranh luận lắng xuống. Được ghi vào lịch sử Hyggshi OS như một hiểu lầm mang tính cộng đồng.</li>
-          <li>Hyggshi OS không phải AI-first company. Đây là dự án cá nhân, dùng AI để hỗ trợ thiết kế và viết code, không dùng làm nền tảng hệ điều hành.</li>
-          <li><strong>⚠ Một số thành phần cốt lõi của Hyggshi OS (API, Engine Modules, Technology) sẽ được chuyển sang mã nguồn đóng để bảo vệ hệ thống.
-            Phần giao diện, app cơ bản và cấu trúc OS vẫn mã nguồn mở, người dùng vẫn có thể sử dụng và tùy chỉnh bình thường.</strong></li>
+          <div class="case-result">Kết quả:
+            <ul>
+              <li>Tranh luận lắng xuống. Được ghi vào lịch sử Hyggshi OS như một hiểu lầm mang tính cộng đồng.</li>
+              <li>Hyggshi OS không phải AI-first company. Đây là dự án cá nhân, dùng AI để hỗ trợ thiết kế và viết code, không dùng làm nền tảng hệ điều hành.</li>
+              <li><strong>⚠ Một số thành phần cốt lõi của Hyggshi OS (API, Engine Modules, Technology) sẽ được chuyển sang mã nguồn đóng để bảo vệ hệ thống.
+                Phần giao diện, app cơ bản và cấu trúc OS vẫn mã nguồn mở, người dùng vẫn có thể sử dụng và tùy chỉnh bình thường.</strong></li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
