--- a/HyggshiOSCodeMini.html
+++ b/HyggshiOSCodeMini.html
@@ -751,8 +751,8 @@
   <section class="hero">
     <div class="hero-bg"></div>
     <div class="hero-content">
-      <h1 class="intro-animated intro-delay-0">Hyggshi OS Code Mini</h1>
-      <p class="subtitle intro-animated intro-delay-1">Code editor hiện đại cho Hyggshi OS với IntelliSense, debugging, và Git integration.</p>
+      <h1 class="intro-animated intro-delay-0 hero-title">Hyggshi OS Code Mini</h1>
+      <p class="subtitle intro-animated intro-delay-1 hero-subtitle">Code editor hiện đại cho Hyggshi OS với IntelliSense, debugging, và Git integration.</p>
       <div class="hero-buttons intro-animated intro-delay-2">
         <a href="#download" class="btn btn-primary"><span style="font-size:1.05em">⇩</span> Tải xuống miễn phí</a>
         <a href="#features" class="btn btn-secondary">Tìm hiểu thêm</a>
