--- a/The-Cases.html
+++ b/The-Cases.html
@@ -218,21 +218,21 @@
           </div>
         </div>
         <div class="case-card feature-card">
-          <div class="case-title"><span class="icon">📁</span>Case #7 – The AI Allegation Debate: “Hyggshi uses Claude?” (25/11/2025)</div>
-          <div class="case-desc">Mô tả: Một số thành viên trong cộng đồng đưa ra giả thuyết rằng Hyggshi OS sử dụng Claude hoặc Lovable AI làm lõi hệ thống do tốc độ phát triển nhanh và một số poster/demo trông giống sản phẩm được tạo bởi AI.</div>
+          <div class="case-title"><span class="icon">📁</span>Case #7 – Tranh luận: “Hyggshi sử dụng công cụ tự động hóa nào không?” (25/11/2025)</div>
+          <div class="case-desc">Mô tả: Một số thành viên trong cộng đồng đặt câu hỏi rằng Hyggshi OS có sử dụng các công cụ hỗ trợ tự động để phát triển nhanh, do một vài poster và demo trông giống sản phẩm được tạo hoặc hỗ trợ bởi công cụ tự động.</div>
           <div class="case-section"><strong>Nguyên nhân gây hiểu nhầm:</strong>
             <ul>
-              <li>Các đoạn code và thiết kế được làm rất nhanh → nghi dùng AI backend.</li>
-              <li>Một số poster, demo có phong cách giống AI-generated.</li>
+              <li>Các đoạn code và thiết kế được làm rất nhanh → nghi dùng công cụ hỗ trợ tự động.</li>
+              <li>Một số poster, demo có phong cách giống nội dung do công cụ tự động hỗ trợ.</li>
             </ul>
           </div>
           <div class="case-section"><strong>Phản hồi chính thức từ Hyggshi OS:</strong>
-            <p>“Hyggshi OS không phải AI-first company. Đây là dự án cá nhân, dùng AI để hỗ trợ thiết kế và viết code, không dùng làm nền tảng hệ điều hành.”</p>
+            <p>“Hyggshi OS là dự án cá nhân. Nhóm có thể sử dụng công cụ hỗ trợ để tăng tốc thiết kế và viết code, nhưng không dựa vào các hệ thống tự động làm lõi của hệ điều hành.”</p>
           </div>
           <div class="case-result">Kết quả:
             <ul>
               <li>Tranh luận lắng xuống. Được ghi vào lịch sử Hyggshi OS như một hiểu lầm mang tính cộng đồng.</li>
-              <li>Hyggshi OS không phải AI-first company. Đây là dự án cá nhân, dùng AI để hỗ trợ thiết kế và viết code, không dùng làm nền tảng hệ điều hành.</li>
+              <li>Hyggshi OS là dự án cá nhân; nhóm có thể sử dụng công cụ hỗ trợ để tăng tốc thiết kế và viết code, nhưng không dựa vào các hệ thống tự động làm lõi của hệ điều hành.</li>
               <li><strong>⚠ Một số thành phần cốt lõi của Hyggshi OS (API, Engine Modules, Technology) sẽ được chuyển sang mã nguồn đóng để bảo vệ hệ thống.
                 Phần giao diện, app cơ bản và cấu trúc OS vẫn mã nguồn mở, người dùng vẫn có thể sử dụng và tùy chỉnh bình thường.</strong></li>
             </ul>
