--- a/erorrcode.html
+++ b/erorrcode.html
@@ -67,7 +67,7 @@
               <div class="feature-icon">⚠️</div>
               <h3><span class="code-badge">0x0001214</span> Không tải được dữ liệu API [No response text found] please reply continue</h3>
               <p class="label-muted">Nguyên nhân</p>
-              <p>Giới hạn API của Google AI Studio, lỗi mạng, hoặc bị chặn API của roblox.</p>
+              <p>Giới hạn API của dịch vụ bên thứ ba, lỗi mạng, hoặc bị chặn API của roblox.</p>
               <p class="label-muted">Cách xử lý</p>
               <p>Thử lại hãy thử lại tin nhắn mới.</p>
             </div>
