--- a/license.html
+++ b/license.html
@@ -50,7 +50,7 @@
             <h3>2. Commercial Restrictions</h3>
             <p>This software may not be used for commercial purposes or for direct or indirect profit, in any form.</p>
             <h3>3. Special Conditions</h3>
-            <p>a) It is not required to use this source code for AI projects.</p>
+            <p>a) It is not required to use this source code for projects that use external automated tools or third-party services.</p>
             <p>b) If you use this source code to create an operating system (OS) or graphical interface (GUI) in Roblox Studio, you must clearly indicate the line:</p>
             <p style="padding:0.5rem 0 0.75rem 0;"><em>By [Your Name]</em></p>
             <p>in a prominent place in the product or accompanying documentation.</p>
