--- a/HyggshiOS1.3.html
+++ b/HyggshiOS1.3.html
@@ -199,10 +199,9 @@
   <section class="gallery-section container">
     <div class="gallery-title">Ảnh giao diện & Chức năng</div>
     <div class="gallery-grid">
-      <div class="gallery-item"><img class="gallery-img" src="Resources/robloxstudio-feature-1.png" alt="Code Editor UI"></div>
-      <div class="gallery-item"><img class="gallery-img" src="Resources/robloxstudio-feature-2.png" alt="Plugin Manager"></div>
-      <div class="gallery-item"><img class="gallery-img" src="Resources/robloxstudio-feature-3.png" alt="Simulator"></div>
-      <div class="gallery-item"><img class="gallery-img" src="Resources/robloxstudio-feature-4.png" alt="Theme/Settings"></div>
+      <div class="gallery-item"><img class="gallery-img" src="Resources/Weather.png" alt="Weather"></div>
+      <div class="gallery-item"><img class="gallery-img" src="Resources/Music.png" alt="Music"></div>
+      <div class="gallery-item"><img class="gallery-img" src="Resources/1.3.png" alt="Simulator"></div>
     </div>
   </section>
 
@@ -219,7 +218,7 @@
   <section class="community-section">
     <div class="community-title">Cộng đồng & Hỗ trợ</div>
     <div class="community-links">
-      <a class="comm-link" href="https://discord.gg/roblox-studio-os" target="_blank">💬 Tham gia Discord</a>
+      <a class="comm-link" href="https://discord.gg/VQCgsmcTuw" target="_blank">💬 Tham gia Discord</a>
       <a class="comm-link" href="https://github.com/HyggshiOSDev/HyggshiOSStudio/wiki" target="_blank">📚 Wiki & Hướng dẫn</a>
       <a class="comm-link" href="#faq">🛈 FAQ</a>
       <a class="comm-link" href="https://github.com/HyggshiOSDev/HyggshiOSStudio/releases" target="_blank">📰 Changelog</a>
@@ -237,12 +236,14 @@
           <div class="marquee-item"><img src="https://open-meteo.com/favicon.ico" alt="Open-Meteo"><span>Open-Meteo</span></div>
           <div class="marquee-item"><img src="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" alt="Gemini"><span>Gemini</span></div>
           <div class="marquee-item"><img src="https://roblox.com/favicon.ico" alt="Roblox"><span>Roblox</span></div>
+          <div class="marquee-item"><img src="https://openweathermap.org/favicon.ico" alt="open weather map"><span>open weather map</span></div>
           <!-- duplicate for seamless loop -->
           <div class="marquee-item"><img src="https://openrouter.ai/favicon.ico" alt="OpenRouter"><span>OpenRouter</span></div>
           <div class="marquee-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/ChatGPT_logo.svg" alt="ChatGPT"><span>ChatGPT</span></div>
           <div class="marquee-item"><img src="https://open-meteo.com/favicon.ico" alt="Open-Meteo"><span>Open-Meteo</span></div>
           <div class="marquee-item"><img src="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" alt="Gemini"><span>Gemini</span></div>
           <div class="marquee-item"><img src="https://roblox.com/favicon.ico" alt="Roblox"><span>Roblox</span></div>
+          <div class="marquee-item"><img src="https://openweathermap.org/favicon.ico" alt="open weather map"><span>open weather map</span></div>
         </div>
       </div>
     </div>
@@ -262,6 +263,14 @@
       <a class="partner-card" href="https://gemini.google/" target="_blank" title="Gemini">
         <img src="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" alt="Gemini logo">
         <span class="partner-name">Gemini</span>
+      </a>
+      <a class="partner-card" href="https://www.roblox.com/" target="_blank" title="Roblox">
+        <img src="https://roblox.com/favicon.ico" alt="Roblox logo">
+        <span class="partner-name">Roblox</span>
+      </a>
+      <a class="partner-card" href="https://openweathermap.org/" target="_blank" title="open weather map">
+        <img src="https://openweathermap.org/favicon.ico" alt="open weather map logo">
+        <span class="partner-name">open weather map</span>
       </a>
   </div>
   </section>
