--- a/projects.html
+++ b/projects.html
@@ -110,28 +110,28 @@
         }
     </style>
 </head>
-<body>
-    <div class="container">
-      <header class="header">
-        <nav class="nav">
-          <div class="logo">
-            <img src="Resources/upscalemedia-transformed.png" alt="Hyggshi OS Logo" style="height: 40px; width: 40px; object-fit: contain; vertical-align: middle; margin-right: 0.5rem; border-radius: 10px; background: rgba(255,255,255,0.2);">
-            <span class="logo-text">Hyggshi OS</span>
-          </div>
-          <ul class="nav-menu">
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="About.html" class="nav-link">About</a></li>
+    <body>
+        <div class="container">
+          <header class="header">
+            <nav class="nav">
+              <div class="logo">
+                <img src="Resources/upscalemedia-transformed.png" alt="Hyggshi OS Logo" style="height: 40px; width: 40px; object-fit: contain; vertical-align: middle; margin-right: 0.5rem; border-radius: 10px; background: rgba(255,255,255,0.2);">
+                <span class="logo-text">Hyggshi OS</span>
+              </div>
+              <ul class="nav-menu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="About.html" class="nav-link">About</a></li>
             <li><a href="projects.html" class="nav-link active">Projects</a></li>
-            <li><a href="History.html" class="nav-link">History</a></li>
+                <li><a href="History.html" class="nav-link">History</a></li>
             <li><a href="The-Cases.html" class="nav-link">Cases</a></li>
-            <li><a href="download.html" class="nav-link">Download</a></li>
+                <li><a href="download.html" class="nav-link">Download</a></li>
             <li><a href="license.html" class="nav-link">License</a></li>
             <li><a href="erorrcode.html" class="nav-link">Error</a></li>
             <li><a href="timeline.html" class="nav-link">Timeline</a></li>
             <li><a href="OSmain.html" class="nav-link">OS</a></li>
-          </ul>
-        </nav>
-      </header>
+              </ul>
+            </nav>
+          </header>
 
         <div class="projects-hero">
             <h1>📂 Dự án chính của Hyggshi OS</h1>
@@ -271,7 +271,7 @@
                     </div>
                     <div class="project-card">
                         <h4>🚧 Đang phát triển</h4>
-                        <p>Hyggshi OS 3.0, Hyggshi OS Flex, Chat Bot AI real, Hyggshi OS Engine</p>
+                        <p>Hyggshi OS 3.0, Hyggshi OS Flex, Chat Bot (integration), Hyggshi OS Engine</p>
                     </div>
                     <div class="project-card">
                         <h4>⏸️ Tạm ngưng</h4>
